syntax = "proto3";

option go_package = ".;pb";

package pb;


enum GenderEnum {
  UnKnow = 0;
  // 男
  Male = 1;
  // 女
  FeMale = 2;
}

// 注册请求参数对象
message RegisterReq {
  // 姓名
  string name = 1;
  // 头像
  string avatar = 2;
  // 手机号
  string mobile = 3;
  // 性别
  GenderEnum gender = 4;
  // 地址
  string address = 5;
}

// 请求结果
message RegisterResp {
  string msg = 1;
}

// 充值请求
message AccountRechargeReq {
  // 账号id
  int64 acc_id = 1;
  // 充值金额
  uint64 amount = 2;
  // 支付单id
  string pay_order_id = 3;
}

message AccountRechargeReply {
  // message
  string message = 1;
}

// 服务方法定义
service Account {
  // rpc 注册方法定义
  rpc RegisterAccount (RegisterReq) returns (RegisterResp) {}
  // 充值定义
  rpc AccountRecharge (AccountRechargeReq) returns (AccountRechargeReply) {}
}